Fixed collapsing forecast columns and body height

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,6 @@
 .bod-style {
   border-radius: 15px;
   margin: 30px;
-  height: 670px;
 
   padding: 16px 30px 0px 30px;
   border: solid #c2c8cf 2px;
@@ -213,7 +212,7 @@ select,
   color: #3a4867;
   font-family: "Nunito", sans-serif;
   position: relative;
-  top: 25px;
+  top: 40px;
   right: 120px;
   font-size: 12px;
 }
@@ -228,7 +227,12 @@ select,
   font-family: "Nunito", sans-serif;
   display: inline-block;
   position: relative;
-  top: 25px;
+  top: 40px;
   right: 120px;
   font-size: 12px;
+}
+
+.row div {
+  padding-left: 6px;
+  padding-right: 6px;
 }
